# Machine-Learning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
Decision Tree/src/: data_loader.py  decision_tree.py  main.py  tree_utils.py
Decision Tree/src/decision_tree/: __init__.py  data_loader.py  decision_tree.py  feature_def.py  tree_utils.py
Ensemble Learning/src/: main.py  main_backup.py
Ensemble Learning/src/adaboost/: __init__.py  adaboost.py  bagging.py  decision_stump.py  utils.py
Ensemble Learning/src/bagging/: __init__.py  bagging.py  bias_variance.py  bias_variance2.py  random_forest.py
Ensemble Learning/src/random/: __init__.py  random_forest.py
Linear Regression/src/: main.py
Linear Regression/src/algorithms/: __init__.py  gradient_descent.py  utils.py
Logistic Regression/: lr.py  lr2.py
Logistic Regression/data/: weights.txt
Neural Networks/output/: error2b.txt  error2c.txt  gradients_2a.txt
Neural Networks/src/: main.py  main2.py  main3.py
Perceptron/output/: voted_perceptron_results_20241107_134406.txt
Perceptron/src/: main.py
Perceptron/src/perceptron/: utils.py  (+2 more)
SVM/output/: svm_comparison_20241127_172941.txt  svm_comparison_20241127_174905.txt  svm_results_gamma0.1_a1.0_20241127_162613.txt  svm_results_schedulea_gamma0.1_20241127_164639.txt  svm_results_scheduleb_gamma0.1_20241127_165849.txt
SVM/src/: main.py  main2.py
bank/: data_loader.py  decision_tree.py  feature_def.py  main_bank.py  tree_utils.py
car/: data-desc.txt  data_loader.py  decision_tree.py  feature_def.py  main_car.py  tree_utils.py
(+7 files in other folders)
