[tool.poetry]
name = "Machine Learning"
version = "0.1.0"
description = "A machine learning project that implements decision trees, "
authors = ["Ishrat Jahan Eliza <ishratjahan.eliza@utah.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
scikit-learn = "^0.24.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
